--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "multi-cursor",
   "main": "./lib/multi-cursor",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Atom package to expand your current cursor.",
   "activationCommands": {
     "atom-workspace": [
@@ -14,6 +14,5 @@
   "engines": {
     "atom": ">=0.174.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
